--- a/web/outlook_small.html
+++ b/web/outlook_small.html
@@ -62,7 +62,7 @@
         o.addPanel(p);
 
         p = new createPanel('p7', '系统管理');
-        p.addButton('images/peditor.gif', '用户维护', 'parent.frames.main.location.href="sysmgr/user_maint.html"');
+        p.addButton('images/peditor.gif', '用户维护', 'parent.frames.main.location.href="sysmgr/user_maint.jsp"');
         p.addButton('images/peditor.gif', '修改密码', 'alert("Personal Editor")');
         o.addPanel(p);
 
