--- a/web/basedata/client_maint.html
+++ b/web/basedata/client_maint.html
@@ -6,8 +6,8 @@
 	</head>
 	<frameset rows="*" cols="267,*" framespacing="0" frameborder="yes"
 		border="1">
-		<frame src="client_tree.html" name="clientTreeFrame"
-			scrolling="scroll" id="clientTreeFrame" />
+		<frame src="client_tree.jsp" name="clientTreeFrame"
+               scrolling="scroll" id="clientTreeFrame" />
 		<frame src="client_display_area.html" name="clientDispAreaFrame"
 			id="clientDispAreaFrame" />
 	</frameset>
