--- a/web/menu.html
+++ b/web/menu.html
@@ -56,7 +56,7 @@
 
         p = new createPanel('p6', '基础数据管理');
         p.addButton('images/word.gif', '会计核算期间维护', 'parent.frames.main.location.href="basedata/fiscal_year_period_maint.html"');
-        p.addButton('images/word.gif', '物料维护', 'parent.frames.main.location.href="basedata/item_maint.jsp"');
+        p.addButton('images/word.gif', '物料维护', 'parent.frames.main.location.href="basedata/SearchItemServlet.servlet"');
         p.addButton('images/word.gif', '分销商维护', 'parent.frames.main.location.href="basedata/client_maint.html"');
         p.addButton('images/word.gif', '终端客户维护(医院)', 'parent.frames.main.location.href="basedata/temi_client_maint.html"');
         o.addPanel(p);
