--- a/web/flowcard/checkvou_add.html
+++ b/web/flowcard/checkvou_add.html
@@ -4,7 +4,7 @@
 		<title>≈Ãµ„Œ¨ª§</title>
 		<link rel="stylesheet" href="../style/drp.css">
 		<link href="../style/JSCalendar.css" rel=stylesheet type=text/css>
-		<script src="../script/JSCalendar.js"></script>
+		<script src="../script/calendar.js"></script>
 		<script src="../script/client_validate.js"></script>
 		<script language="javascript">
     function selectItem(index) {
