--- a/web/flowcard/checkvou_modify.html
+++ b/web/flowcard/checkvou_modify.html
@@ -4,7 +4,7 @@
 		<title>修改盘点结果</title>
 		<link rel="stylesheet" href="../style/drp.css">
 		<link href="../style/JSCalendar.css" rel=stylesheet type=text/css>
-		<script src="../script/JSCalendar.js"></script>
+		<script src="../script/calendar.js"></script>
 		<script src="../script/windows.js"></script>
 		<script src="../script/client_validate.js"></script>
 		<script language="javascript">
