--- a/web/flowcard/flow_card_modify.html
+++ b/web/flowcard/flow_card_modify.html
@@ -6,7 +6,7 @@ pageEncoding="GB18030"%>
 		<title>添加流向单维护</title>
 		<link rel="stylesheet" href="../style/drp.css">
 		<link href="../style/JSCalendar.css" rel=stylesheet type=text/css>
-		<script src="../script/JSCalendar.js"></script>
+		<script src="../script/calendar.js"></script>
 		<script src="../script/client_validate.js"></script>
 		<script language="javascript">
     var rowIndex = 0;
