--- a/web/flowcard/flow_card_rehear.html
+++ b/web/flowcard/flow_card_rehear.html
@@ -4,7 +4,7 @@
 		<title>Á÷Ïòµ¥¸´Éó</title>
 		<link rel="stylesheet" href="../style/drp.css">
 		<link href="../style/JSCalendar.css" rel=stylesheet type=text/css>
-		<script src="../script/JSCalendar.js"></script>
+		<script src="../script/calendar.js"></script>
 		<script src="../script/client_validate.js"></script>
 	</head>
 
