--- a/web/flowlist/checkvou_maint.html
+++ b/web/flowlist/checkvou_maint.html
@@ -43,7 +43,7 @@
 							<input name="clientId" type="text" class="text1" id="clientId4"
 								size="10" maxlength="10" readonly="true">
 							<input name="btnSelectClient" type="button" id=""
-								btnSelectClient"" value="..." class="button1"
+								btnSelectClient="" value="..." class="button1"
 								onClick="window.open('client_select.html', '选择分销商', 'width=700, height=400, scrollbars=no')">
 						</td>
 						<td width="14%">
