--- a/web/flowlist/inv_init_qty_confirm.html
+++ b/web/flowlist/inv_init_qty_confirm.html
@@ -388,7 +388,7 @@
 								<input name="btnBottomPage" class="button1" type="button"
 									id="btnBottomPage" value=" &gt;&gt;|" title="尾页">
 								<input name="btnOk" class="button1" type="button" id="btnOk"
-									value="确认"">
+									value="确认">
 							</div>
 						</td>
 					</tr>
