--- a/web/menu.html
+++ b/web/menu.html
@@ -28,13 +28,13 @@
 
         //create first panel
         p = new createPanel('p1', '分销商库存管理');
-        p.addButton('images/word.gif', '分销商库存数量初始化', 'parent.frames.main.location.href="flowcard/inv_init_qty_maint.html"');
-        p.addButton('images/word.gif', '分销商库存数量初始化确认', 'parent.frames.main.location.href="flowcard/inv_init_qty_confirm.html"');
-        p.addButton('images/word.gif', '流向单维护', 'parent.frames.main.location.href="flowcard/flow_card_maint.html"');
-        p.addButton('images/word.gif', '流向单审核', 'parent.frames.main.location.href="flowcard/flow_card_audit.html"');
-        p.addButton('images/word.gif', '流向单复审', 'parent.frames.main.location.href="flowcard/flow_card_spot_test.html"');
-        p.addButton('images/word.gif', '盘点结果维护', 'parent.frames.main.location.href="flowcard/flow_card_rehear.html"');
-        p.addButton('images/word.gif', '盘点结果审核', 'parent.frames.main.location.href="flowcard/checkvou_maint.html"');
+        p.addButton('images/word.gif', '分销商库存数量初始化', 'parent.frames.main.location.href="flowlist/inv_init_qty_maint.html"');
+        p.addButton('images/word.gif', '分销商库存数量初始化确认', 'parent.frames.main.location.href="flowlist/inv_init_qty_confirm.html"');
+        p.addButton('images/word.gif', '流向单维护', 'parent.frames.main.location.href="flowlist/flow_card_maint.html"');
+        p.addButton('images/word.gif', '流向单审核', 'parent.frames.main.location.href="flowlist/flow_card_audit.html"');
+        p.addButton('images/word.gif', '流向单复审', 'parent.frames.main.location.href="flowlist/flow_card_spot_test.html"');
+        p.addButton('images/word.gif', '盘点结果维护', 'parent.frames.main.location.href="flowlist/flow_card_rehear.html"');
+        p.addButton('images/word.gif', '盘点结果审核', 'parent.frames.main.location.href="flowlist/checkvou_maint.html"');
         o.addPanel(p);
 
         p = new createPanel('p2', '分销费管理');
