--- a/web/basedata/temi_client_maint.html
+++ b/web/basedata/temi_client_maint.html
@@ -6,8 +6,8 @@
 	</head>
 	<frameset rows="*" cols="267,*" framespacing="0" frameborder="yes"
 		border="1">
-		<frame src="temi_client_tree.html" name="temiClientTreeFrame"
-			scrolling="scroll" id="temiClientTreeFrame" />
+		<frame src="temi_client_tree.jsp" name="temiClientTreeFrame"
+               scrolling="scroll" id="temiClientTreeFrame" />
 		<frame src="temi_client_display_area.html"
 			name="temiClientDispAreaFrame" id="temiClientDispAreaFrame" />
 	</frameset>
