--- a/web/menu.html
+++ b/web/menu.html
@@ -36,15 +36,15 @@
         p.addButton('images/word.gif', '盘点结果维护', 'parent.frames.main.location.href="flowlist/flow_card_rehear.html"');
         p.addButton('images/word.gif', '盘点结果审核', 'parent.frames.main.location.href="flowlist/checkvou_maint.html"');
         o.addPanel(p);
-
-        p = new createPanel('p2', '分销费管理');
-        o.addPanel(p);
-
-        p = new createPanel('p3', '结账管理');
-        o.addPanel(p);
-
-        p = new createPanel('p4', '付费结算管理');
-        o.addPanel(p);
+//
+//        p = new createPanel('p2', '分销费管理');
+//        o.addPanel(p);
+//
+//        p = new createPanel('p3', '结账管理');
+//        o.addPanel(p);
+//
+//        p = new createPanel('p4', '付费结算管理');
+//        o.addPanel(p);
 
         p = new createPanel('p5', '统计报表管理');
         p.addButton('images/word.gif', '分销商级别分布图', 'parent.frames.main.location.href="statreport/client_level_chart.html"');
