--- a/web/menu.html
+++ b/web/menu.html
@@ -30,7 +30,7 @@
         p = new createPanel('p1', '分销商库存管理');
         p.addButton('images/word.gif', '分销商库存数量初始化', 'parent.frames.main.location.href="flowlist/inv_init_qty_maint.html"');
         p.addButton('images/word.gif', '分销商库存数量初始化确认', 'parent.frames.main.location.href="flowlist/inv_init_qty_confirm.html"');
-        p.addButton('images/word.gif', '流向单维护', 'parent.frames.main.location.href="flowlist/flow_card_maint.html"');
+        p.addButton('images/word.gif', '流向单维护', 'parent.frames.main.location.href="flowlist/FlowListServlet.servlet?command=search"');
         p.addButton('images/word.gif', '流向单审核', 'parent.frames.main.location.href="flowlist/flow_card_audit.html"');
         p.addButton('images/word.gif', '流向单复审', 'parent.frames.main.location.href="flowlist/flow_card_spot_test.html"');
         p.addButton('images/word.gif', '盘点结果维护', 'parent.frames.main.location.href="flowlist/flow_card_rehear.html"');
