--- a/web/about.html
+++ b/web/about.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=GB18030">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="stylesheet" href="style/drp.css">
 	</head>
 	<body leftmargin=0>
