--- a/web/basedata/temi_client_display_area.html
+++ b/web/basedata/temi_client_display_area.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<link rel="stylesheet" href="../style/drp.css" />
-		<meta http-equiv="Content-Type" content="text/html; charset=GB18030" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title></title>
 	</head>
 
