--- a/web/basedata/temi_client_maint.html
+++ b/web/basedata/temi_client_maint.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=GB18030">
-		<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-		<title>终端客户信息维护</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>缁堢瀹㈡埛淇℃伅缁存姢</title>
 	</head>
 	<frameset rows="*" cols="267,*" framespacing="0" frameborder="yes"
 		border="1">
