--- a/web/menu.html
+++ b/web/menu.html
@@ -28,45 +28,46 @@
 
         //create first panel
         p = new createPanel('p1', '分销商库存管理');
-        p.addButton('images/word.gif', '分销商库存数量初始化', 'parent.frames.main.location.href="flowlist/inv_init_qty_maint.html"');
-        p.addButton('images/word.gif', '分销商库存数量初始化确认', 'parent.frames.main.location.href="flowlist/inv_init_qty_confirm.html"');
+        //        p.addButton('images/word.gif', '分销商库存数量初始化', 'parent.frames.main.location.href="flowlist/inv_init_qty_maint.html"');
+        //        p.addButton('images/word.gif', '分销商库存数量初始化确认', 'parent.frames.main.location.href="flowlist/inv_init_qty_confirm.html"');
         p.addButton('images/word.gif', '流向单维护', 'parent.frames.main.location.href="flowlist/FlowListServlet.servlet"');
-        p.addButton('images/word.gif', '流向单审核', 'parent.frames.main.location.href="flowlist/flow_card_audit.html"');
-        p.addButton('images/word.gif', '流向单复审', 'parent.frames.main.location.href="flowlist/flow_card_spot_test.html"');
-        p.addButton('images/word.gif', '盘点结果维护', 'parent.frames.main.location.href="flowlist/flow_card_rehear.html"');
-        p.addButton('images/word.gif', '盘点结果审核', 'parent.frames.main.location.href="flowlist/checkvou_maint.html"');
+        //        p.addButton('images/word.gif', '流向单审核', 'parent.frames.main.location.href="flowlist/flow_card_audit.html"');
+        //        p.addButton('images/word.gif', '流向单复审', 'parent.frames.main.location.href="flowlist/flow_card_spot_test.html"');
+        //        p.addButton('images/word.gif', '盘点结果维护', 'parent.frames.main.location.href="flowlist/flow_card_rehear.html"');
+        //        p.addButton('images/word.gif', '盘点结果审核', 'parent.frames.main.location.href="flowlist/checkvou_maint.html"');
         o.addPanel(p);
-//
-//        p = new createPanel('p2', '分销费管理');
-//        o.addPanel(p);
-//
-//        p = new createPanel('p3', '结账管理');
-//        o.addPanel(p);
-//
-//        p = new createPanel('p4', '付费结算管理');
-//        o.addPanel(p);
+        //
+        //        p = new createPanel('p2', '分销费管理');
+        //        o.addPanel(p);
+        //
+        //        p = new createPanel('p3', '结账管理');
+        //        o.addPanel(p);
+        //
+        //        p = new createPanel('p4', '付费结算管理');
+        //        o.addPanel(p);
 
-        p = new createPanel('p5', '统计报表管理');
-        p.addButton('images/word.gif', '分销商级别分布图', 'parent.frames.main.location.href="statreport/client_level_chart.html"');
-        p.addButton('images/word.gif', '流向单录入审核报告', 'parent.frames.main.location.href="statreport/flow_card_audit_report.html"');
-        p.addButton('images/word.gif', '流向单抽查报告', 'parent.frames.main.location.href="statreport/flow_card_spot_test_report.html"');
-        p.addButton('images/word.gif', '分销商月度分销(调拨)明细表', 'parent.frames.main.location.href="statreport/client_detail_month_per.html"');
-        p.addButton('images/word.gif', '分销商库存报表', 'parent.frames.main.location.href="statreport/client_stock_report.html"');
-        o.addPanel(p);
+        //        p = new createPanel('p5', '统计报表管理');
+        //        p.addButton('images/word.gif', '分销商级别分布图', 'parent.frames.main.location.href="statreport/client_level_chart.html"');
+        //        p.addButton('images/word.gif', '流向单录入审核报告', 'parent.frames.main.location.href="statreport/flow_card_audit_report.html"');
+        //        p.addButton('images/word.gif', '流向单抽查报告', 'parent.frames.main.location.href="statreport/flow_card_spot_test_report.html"');
+        //        p.addButton('images/word.gif', '分销商月度分销(调拨)明细表', 'parent.frames.main.location.href="statreport/client_detail_month_per.html"');
+        //        p.addButton('images/word.gif', '分销商库存报表', 'parent.frames.main.location.href="statreport/client_stock_report.html"');
+        //        o.addPanel(p);
 
-        p = new createPanel('p6', '基础数据管理');
+        p = new createPanel('p2', '基础数据管理');
         p.addButton('images/word.gif', '会计核算期间维护', 'parent.frames.main.location.href="basedata/fiscal_year_period_maint.jsp"');
         p.addButton('images/word.gif', '物料维护', 'parent.frames.main.location.href="basedata/SearchItemServlet.servlet"');
         p.addButton('images/word.gif', '分销商维护', 'parent.frames.main.location.href="basedata/client_maint.html"');
         p.addButton('images/word.gif', '终端客户维护(医院)', 'parent.frames.main.location.href="basedata/temi_client_maint.html"');
         o.addPanel(p);
 
-        p = new createPanel('p7', '系统管理');
+        p = new createPanel('p3', '系统管理');
         p.addButton('images/peditor.gif', '用户维护', 'parent.frames.main.location.href="sysmgr/user_maint.jsp"');
         p.addButton('images/peditor.gif', '修改密码', 'parent.frames.main.location.href="sysmgr/password_modify.jsp"');
         o.addPanel(p);
 
         o.draw();
+
         function resize_op5() {
             if (bt.op5) {
                 o.showPanel(o.aktPanel);
